--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 		</div>
 	</header>
 	<section class="slider">
+		<button class="slider__prev"></button>
+		<button class="slider__next"></button>
 		<div class="slider__list">
 			<ul>
 				<li>
@@ -117,9 +119,8 @@
 			</ul>
 		</div>
 	</section>
-	<div class="push"></div>
 </section>
-<footer>
+<footer class="footer">
 	
 </footer>
 <!-- END .wrap -->
