--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<title>Template</title>
 	<link rel="stylesheet" media="screen" href="css/screen.css">
 	<!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
-	<link href='http://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/common.js"></script>
 </head>
@@ -18,7 +17,7 @@
 		<nav class="nav">
 			<ul>
 				<li><a class="nav__item-1" href="#">Create Guide</a></li>
-				<li><a class="nav__item-2" href="#">My Guides</a></li>
+				<li class="active"><a class="nav__item-2" href="#">My Guides</a></li>
 				<li><a class="nav__item-3" href="#">My Profile</a></li>
 			</ul>
 		</nav>
@@ -119,9 +118,24 @@
 			</ul>
 		</div>
 	</section>
+	<section class="bottom">
+		<button class="btn-earning">Request Earnings</button>
+		<div class="link">
+			<a href="#">Create anothe<span>r guide</span></a>
+		</div>
+	</section>
 </section>
 <footer class="footer">
-	
+	<div class="container">
+		<div class="footer__nav">
+			<ul>
+				<li><a href="#">Contact Us</a></li>                  
+				<li><a href="#">Terms of Use</a></li>
+				<li><a href="#">Privacy Policy</a></li>
+			</ul>
+		</div>
+		<div class="copyright">Copyright © 2013 Guidestock. All Rights Reserved.</div>
+	</div>	
 </footer>
 <!-- END .wrap -->
 <div class="test">
