--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- BEGIN .wrap -->
 <section class="wrap">
 	<header class="header">
-		<a href="#" class="logo">Guidestock</a>
+		<h1 class="logo"><a href="#">Guidestock</a></h1>
 		<nav class="nav">
 			<ul>
 				<li><a class="nav__item-1" href="#">Create Guide</a></li>
@@ -38,80 +38,104 @@
 		<div class="slider__list">
 			<ul>
 				<li>
-					<span class="slider__type slider__type_approved">Approved</span>
 					<div class="slider__pic">
-						<a href="#"><img src="img/pic1.jpg" alt=""></a>
+						<a href="#">
+							<span class="slider__approved"></span>
+							<img src="img/pic1.jpg" alt="">
+							<div class="slider__pic-out"></div>
+						</a>
 					</div>
 					<div class="slider__info">
 						<a href="#">Paris</a>
 						<div class="slider__btns">
-							<button class="slider__submit">submit</button>
-							<button class="slider__edit">edit</button>
-							<button class="slider__delete">delete</button>
+							<button class="btn btn_submit">submit</button>
+							<button class="btn btn_edit">edit</button>
+							<button class="btn btn_delete">delete</button>
 						</div>
 					</div>
 				</li>
 				<li>
-					<span class="slider__type slider__type_saved">Saved</span>
 					<div class="slider__pic">
-						<a href="#"><img src="img/pic1.jpg" alt=""></a>
+						<a href="#">
+							<span class="slider__saved"></span>
+							<img src="img/pic1.jpg" alt="">
+							<div class="slider__pic-out"></div>
+						</a>
 					</div>
 					<div class="slider__info">
-						<a href="#">Danmark</a>
+						<a href="#">Paris</a>
 						<div class="slider__btns">
-							<button class="slider__edit">edit</button>
-							<button class="slider__delete">delete</button>
+							<button class="btn btn_submit">submit</button>
+							<button class="btn btn_edit">edit</button>
+							<button class="btn btn_delete">delete</button>
 						</div>
 					</div>
 				</li>
 				<li>
-					<span class="slider__type slider__type_rejected">Rejected</span>
 					<div class="slider__pic">
-						<a href="#"><img src="img/pic1.jpg" alt=""></a>
+						<a href="#">
+							<span class="slider__rejected"></span>
+							<img src="img/pic1.jpg" alt="">
+							<div class="slider__pic-out"></div>
+						</a>
 					</div>
 					<div class="slider__info">
-						<a href="#">Danmark</a>
+						<a href="#">Paris</a>
 						<div class="slider__btns">
-							<button class="slider__edit">edit</button>
-							<button class="slider__delete">delete</button>
+							<button class="btn btn_submit">submit</button>
+							<button class="btn btn_edit">edit</button>
+							<button class="btn btn_delete">delete</button>
 						</div>
 					</div>
 				</li>
 				<li>
-					<span class="slider__type slider__type_pending">Pending</span>
 					<div class="slider__pic">
-						<a href="#"><img src="img/pic1.jpg" alt=""></a>
+						<a href="#">
+							<span class="slider__pending"></span>
+							<img src="img/pic1.jpg" alt="">
+							<div class="slider__pic-out"></div>
+						</a>
 					</div>
 					<div class="slider__info">
-						<a href="#">Danmark</a>
+						<a href="#">Paris</a>
 						<div class="slider__btns">
-							<button class="slider__edit">edit</button>
-							<button class="slider__delete">delete</button>
+							<button class="btn btn_submit">submit</button>
+							<button class="btn btn_edit">edit</button>
+							<button class="btn btn_delete">delete</button>
 						</div>
 					</div>
 				</li>
 				<li>
-					<span class="slider__type slider__type_saved">Saved</span>
 					<div class="slider__pic">
-						<a href="#"><img src="img/pic1.jpg" alt=""></a>
+						<a href="#">
+							<span class="slider__saved"></span>
+							<img src="img/pic1.jpg" alt="">
+							<div class="slider__pic-out"></div>
+						</a>
 					</div>
 					<div class="slider__info">
-						<a href="#">Danmark</a>
+						<a href="#">Paris</a>
 						<div class="slider__btns">
-							<button class="slider__edit">edit</button>
-							<button class="slider__delete">delete</button>
+							<button class="btn btn_submit">submit</button>
+							<button class="btn btn_edit">edit</button>
+							<button class="btn btn_delete">delete</button>
 						</div>
 					</div>
-				</li><li>
-					<span class="slider__type slider__type_rejected">Rejected</span>
+				</li>
+				<li>
 					<div class="slider__pic">
-						<a href="#"><img src="img/pic1.jpg" alt=""></a>
+						<a href="#">
+							<span class="slider__rejected"></span>
+							<img src="img/pic1.jpg" alt="">
+							<div class="slider__pic-out"></div>
+						</a>
 					</div>
 					<div class="slider__info">
-						<a href="#">Danmark</a>
+						<a href="#">Paris</a>
 						<div class="slider__btns">
-							<button class="slider__edit">edit</button>
-							<button class="slider__delete">delete</button>
+							<button class="btn btn_submit">submit</button>
+							<button class="btn btn_edit">edit</button>
+							<button class="btn btn_delete">delete</button>
 						</div>
 					</div>
 				</li>
@@ -120,7 +144,7 @@
 	</section>
 	<section class="bottom">
 		<button class="btn-earning">Request Earnings</button>
-		<div class="link">
+		<div class="btn-guide btn-guide_another">
 			<a href="#">Create anothe<span>r guide</span></a>
 		</div>
 	</section>
@@ -138,8 +162,5 @@
 	</div>	
 </footer>
 <!-- END .wrap -->
-<div class="test">
-	<img src="img/test.png" alt="">
-</div>
 </body>
 </html>
