--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 	</section>
 	<section class="bottom">
 		<button class="btn-earning">Request Earnings</button>
-		<div class="btn-guide btn-guide_another">
+		<div class="btn-big btn-big_another">
 			<a href="#">Create anothe<span>r guide</span></a>
 		</div>
 	</section>
