--- a/profile.html
+++ b/profile.html
@@ -14,35 +14,32 @@
 <section class="wrap">
 	<header class="header">
 		<h1 class="logo"><a href="#">Guidestock</a></h1>
-		<div class="login login_enter">
+		<nav class="nav">
+			<ul>
+				<li><a class="nav__item-1" href="#">Create Guide</a></li>
+				<li class="active"><a class="nav__item-2" href="#">My Guides</a></li>
+				<li><a class="nav__item-3" href="#">My Profile</a></li>
+			</ul>
+		</nav>
+		<div class="login">
+			<div class="login__pic">
+				<a href="#"><img src="img/user.jpg" alt=""></a>
+			</div>
 			<div class="login__info">
-				<button>LOG IN</button>
+				<span>Welcome</span>
+				<a href="#">Stanislav Schangin</a>
+				<button>LOG OUT</button>
 			</div>			
 		</div>
 	</header>
-	<section class="steps">
-		<h2 class="steps__title">This is Photoshop's version<span>of Lorem Ipsum.</span></h2>			
-		<ul class="steps__list">
-			<li>	
-				<img src="img/v1.png">
-				<h3 class="title">Draw your <span>map</span></h3>
-				<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor. </p>
-			</li>
-			<li>	
-				<img src="img/v2.png">
-				<h3 class="title">Record your <span>voice</span></h3>
-				<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,  This is Photoshop's version  of Lorem Ipsum. </p>
-			</li>
-			<li>	
-				<img src="img/v3.png">
-				<h3 class="title">Earn <span>Money</span></h3>
-				<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor. </p>
-			</li>
-		</ul>
+	<section class="profile">
+		<div class="profile__photo">
+			<img src="img/pic2.jpg" alt="">
+		</div>
 	</section>
 	<section class="bottom">
-		<div class="btn-big btn-big_create">
-			<a href="#">Create<span>Guide</span></a>
+		<div class="btn-big btn-big_save">
+			<a href="#">Save</a>
 		</div>
 	</section>
 </section>
