--- a/instruction.html
+++ b/instruction.html
@@ -95,7 +95,7 @@
 		<h3 class="instructions__info">When you’re done, click <span>Save</span> if you want to keep your changes for now, and reserve the chance<br>to edit the guide later; or <span>Submit</span> if the guide is complete and ready to be reviewed.</h3>
 	</section>
 	<section class="bottom">
-		<div class="btn-guide btn-guide_create">
+		<div class="btn-big btn-big_create">
 			<a href="#">Create<span>Guide</span></a>
 		</div>
 	</section>
