--- a/profile.html
+++ b/profile.html
@@ -33,8 +33,19 @@
 		</div>
 	</header>
 	<section class="profile">
-		<div class="profile__photo">
+		<div class="profile__photo">			
 			<img src="img/pic2.jpg" alt="">
+			<div class="profile__photo-bg"></div>
+		</div>
+		<div class="profile__detail">
+			<div class="profile__name">
+				<input type="text" value="Jo">
+				<button></button>
+			</div>
+			<div class="profile__desc">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.<button></button></div>
+			<div class="profile__country">
+				
+			</div>
 		</div>
 	</section>
 	<section class="bottom">
