--- a/popup_contacts.html
+++ b/popup_contacts.html
@@ -14,17 +14,17 @@
 <form class="popup popup_contacts" action="">
 	<div class="popup__title">Contact <span>Us</span></div>
 	<div class="text-field">
-		<input type="text" placeholder="Username">
+		<input type="text" value="Username">
 		<div class="text-field__bg-1"><img src="img/inp1.png" alt=""></div>
 		<div class="text-field__bg-2"><img src="img/inp2.png" alt=""></div>
 	</div>
 	<div class="text-field">
-		<input type="text" placeholder="Email address">
+		<input type="text" value="Email address">
 		<div class="text-field__bg-1"><img src="img/inp1.png" alt=""></div>
 		<div class="text-field__bg-2"><img src="img/inp2.png" alt=""></div>
 	</div>
 	<div class="text-field">
-		<textarea placeholder="Type in your question"></textarea>
+		<textarea>Type in your question</textarea>
 		<div class="text-field__bg-1"><img src="img/inp1.png" alt=""></div>
 		<div class="text-field__bg-2"><img src="img/inp2.png" alt=""></div>
 	</div>
