--- a/profile.html
+++ b/profile.html
@@ -64,6 +64,7 @@
 				<li><a href="#">Contact Us</a></li>                  
 				<li><a href="#">Terms of Use</a></li>
 				<li><a href="#">Privacy Policy</a></li>
+				<li><a href="#">Tutorial</a></li>
 			</ul>
 		</div>
 		<div class="copyright">Copyright © 2013 Guidestock. All Rights Reserved.</div>
