--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 	<section class="bottom">
 		<button class="btn-earning">Request Earnings</button>
 		<div class="btn-big btn-big_another">
-			<a href="#">Create anothe<span>r guide</span></a>
+			<a href="#"><span>Create another guide</span></a>
 		</div>
 	</section>
 </section>
