--- a/instruction.html
+++ b/instruction.html
@@ -95,8 +95,8 @@
 		<h3 class="instructions__info">When you’re done, click <span>Save</span> if you want to keep your changes for now, and reserve the chance<br>to edit the guide later; or <span>Submit</span> if the guide is complete and ready to be reviewed.</h3>
 	</section>
 	<section class="bottom">
-		<div class="btn-big btn-big_create">
-			<a href="#">Create<span>Guide</span></a>
+		<div class="btn-big btn-big_create-1">
+			<a href="#"><strong>Create<span>Guide</span></strong></a>
 		</div>
 	</section>
 </section>
