--- a/profile.html
+++ b/profile.html
@@ -53,7 +53,7 @@
 	</section>
 	<section class="bottom">
 		<div class="btn-big btn-big_save">
-			<a href="#">Save</a>
+			<a href="#"><span>Save</span></a>
 		</div>
 	</section>
 </section>
