--- a/version.html
+++ b/version.html
@@ -42,7 +42,8 @@
 	</section>
 	<section class="bottom">
 		<div class="btn-big btn-big_create">
-			<a href="#">Create<span>Guide</span></a>
+			<i class="ico-comm"></i>
+			<a href="#"><strong>Create<span>Guide</span></strong></a>
 		</div>
 	</section>
 </section>
