--- a/popup_login.html
+++ b/popup_login.html
@@ -18,6 +18,7 @@
 		<div class="text-field__bg-1"><img src="img/inp1.png" alt=""></div>
 		<div class="text-field__bg-2"><img src="img/inp2.png" alt=""></div>
 	</div>
+	<div class="popup__error"><span>Username already exists</span></div>
 	<div class="text-field">
 		<input type="text" placeholder="Email address">
 		<div class="text-field__bg-1"><img src="img/inp1.png" alt=""></div>
@@ -27,15 +28,15 @@
 		<span>Username and password do not match</span>
 		<a href="#">Forgot your password ?</a>
 	</div>	
-	<div class="popup__or"><span>or</span><i></i></div>
-	<div class="popup__fb">
-		<a href="#"></a>
+	<div class="popup__social">
+		<a class="popup__fb" href="#"></a>
+		<a class="popup__tw" href="#"></a>
 	</div>
 	<input class="popup__btn" type="submit" value="Log In">
 	<div class="popup__reset-pass">
 		<p>Enter your email address to reset the password</p>
 		<div class="text-field">
-			<input type="text">
+			<input class="focus" type="text">
 			<div class="text-field__bg-1"><img src="img/inp1.png" alt=""></div>
 			<div class="text-field__bg-2"><img src="img/inp2.png" alt=""></div>
 			<button></button>
