--- a/popup_password.html
+++ b/popup_password.html
@@ -18,7 +18,7 @@
 		<div class="text-field__bg-1"><img src="img/inp1.png" alt=""></div>
 		<div class="text-field__bg-2"><img src="img/inp2.png" alt=""></div>
 	</div>
-	<div class="text-field">
+	<div class="text-field text-field_last">
 		<input type="text" placeholder="New password">
 		<div class="text-field__bg-1"><img src="img/inp1.png" alt=""></div>
 		<div class="text-field__bg-2"><img src="img/inp2.png" alt=""></div>
