--- a/popup_sign.html
+++ b/popup_sign.html
@@ -35,14 +35,14 @@
 		<div class="text-field__bg-2"><img src="img/inp2.png" alt=""></div>
 	</div>
 	<div class="popup__error">
-		<span>Format of this email address is incorrect</span>
-	</div>	
+		<span>Password must contain at least 6 symbols</span>
+	</div>
 	<div class="popup__terms">
 		<label><input type="checkbox"><i></i>I agree with <a href="#">Terms of Use</a></label>
 	</div>
-	<div class="popup__or"><span>or</span><i></i></div>
-	<div class="popup__fb">
-		<a href="#"></a>
+	<div class="popup__social">
+		<a class="popup__fb" href="#"></a>
+		<a class="popup__tw" href="#"></a>
 	</div>
 	<input class="popup__btn" type="submit" value="Sign Up">
 	<div class="popup__bg-1"><img src="img/pp-bg1.png" alt=""></div>
