--- a/create.html
+++ b/create.html
@@ -34,8 +34,39 @@
 	</header>
 	<section class="create">
 		<div class="create__panel">
-			<div class="create__instruments">
+			<div class="create__work-place">
 				<img src="img/panel.png" alt="">
+			</div>
+			<div class="create__instruments">
+				<div class="create__btns">
+					<div class="cr-btn-1"></div>
+					<div class="cr-btn-2"></div>
+					<div class="cr-btn-3"></div>
+				</div>
+				<div class="create__slider"><i></i></div>
+				<div class="create__volume">
+					<button class="create__mute"></button>
+					<div class="create__slider"><i></i></div>
+					<div class="create__time"><span>0:15</span> / 0:30</div>
+				</div>
+			</div>
+			<div class="create__instruments">
+				<div class="create__btns create__btns_mod">
+					<div class="cr-btn-1"></div>
+					<div class="cr-btn-2"></div>
+					<div class="cr-btn-3 active"></div>
+					<div class="cr-btn-4"></div>
+					<div class="cr-btn-5"></div>
+					<div class="cr-btn-6"></div>
+					<div class="cr-btn-7"></div>
+					<div class="cr-btn-8"></div>
+					<div class="cr-btn-9"></div>
+				</div>
+				<div class="create__volume">
+					<button class="create__mute"></button>
+					<div class="create__slider"><i></i></div>
+					<div class="create__time"><span>0:15</span> / 0:30</div>
+				</div>
 			</div>
 			<div class="create__bg-1"><img src="img/cr-bg1.png" alt=""></div>
 			<div class="create__bg-2"><img src="img/cr-bg2.png" alt=""></div>
