create panel and fixes popups

--- a/popup_login.html
+++ b/popup_login.html
@@ -28,9 +28,9 @@
 		<span>Username and password do not match</span>
 		<a href="#">Forgot your password ?</a>
 	</div>	
+	<div class="popup__or"><span>or</span><i></i></div>
 	<div class="popup__social">
 		<a class="popup__fb" href="#"></a>
-		<a class="popup__tw" href="#"></a>
 	</div>
 	<input class="popup__btn" type="submit" value="Log In">
 	<div class="popup__reset-pass">
