--- a/popup_login_sign.html
+++ b/popup_login_sign.html
@@ -64,9 +64,9 @@
 			<input class="popup__btn" type="submit" value="Log In">
 		</form>
 	</div>
+	<div class="popup__or"><span>or</span><i></i></div>
 	<div class="popup__social">
 		<a class="popup__fb" href="#"></a>
-		<a class="popup__tw" href="#"></a>
 	</div>
 	<div class="popup__bg-1"><img src="img/pp-bg1.png" alt=""></div>
 	<div class="popup__bg-2"><img src="img/pp-bg2.png" alt=""></div>
