--- a/popup_sign.html
+++ b/popup_sign.html
@@ -40,9 +40,9 @@
 	<div class="popup__terms">
 		<label><input type="checkbox"><i></i>I agree with <a href="#">Terms of Use</a></label>
 	</div>
+	<div class="popup__or"><span>or</span><i></i></div>
 	<div class="popup__social">
 		<a class="popup__fb" href="#"></a>
-		<a class="popup__tw" href="#"></a>
 	</div>
 	<input class="popup__btn" type="submit" value="Sign Up">
 	<div class="popup__bg-1"><img src="img/pp-bg1.png" alt=""></div>
