--- a/create.html
+++ b/create.html
@@ -198,5 +198,37 @@
 	</div>	
 </footer>
 <!-- END .wrap -->
+<!-- BEGIN .checkpoint -->
+<form class="checkpoint" action="" style="top: 50px; left: 50px">
+	<strong>Enter the name of the checkpoint</strong>
+	<input class="checkpoint__name" type="text">
+	<strong>Browse a photo</strong>
+	<div class="checkpoint__photo">
+		<div class="checkpoint__pic">
+			<input type="file">
+		</div>
+		<div class="checkpoint__btns">
+			<button class="checkpoint__ok">OK</button>
+			<button class="checkpoint__cancel">Cancel</button>
+		</div>
+	</div>
+</form>
+<!-- END .checkpoint -->
+<!-- BEGIN .checkpoint -->
+<form class="checkpoint" action="" style="top: 300px; left: 50px">
+	<strong>Enter the name of the checkpoint</strong>
+	<input class="checkpoint__name" type="text">
+	<strong>Browse a photo</strong>
+	<div class="checkpoint__photo">
+		<div class="checkpoint__pic">
+			<input type="file">
+		</div>
+		<div class="checkpoint__btns">
+			<button class="checkpoint__ok">Save</button>
+			<button class="checkpoint__delete">Delete</button>
+		</div>
+	</div>
+</form>
+<!-- END .checkpoint -->
 </body>
 </html>
