--- a/create.html
+++ b/create.html
@@ -86,7 +86,34 @@
 					<div class="create__time"><span>0:15</span> / 0:30</div>
 				</div>
 			</div>
+			<div class="create__bg-1"><img src="img/cr-bg1.png" alt=""></div>
+			<div class="create__bg-2"><img src="img/cr-bg2.png" alt=""></div>
+			<div class="create__bg-3"><img src="img/cr-bg3.png" alt=""></div>
+			<div class="create__bg-4"><img src="img/cr-bg4.png" alt=""></div>
+		</div>
+		<div class="create__panel">
 			<div class="work-overview">
+				<div class="work-overview__process">
+					<strong>Processing</strong>
+					<ul>
+						<li>
+							<span>Uploading</span>
+							<i><em style="width: 20%"></em></i>
+							<button></button>
+						</li>
+						<li>
+							<span>Saving</span>
+							<i><em style="width: 20%"></em></i>
+							<button></button>
+						</li>
+						<li>
+							<span>Autosaving</span>
+							<i><em style="width: 20%"></em></i>
+							<button></button>
+						</li>
+					</ul>
+				</div>
+				<button class="work-overview__back">Back to overview</button>
 				<div class="work-overview__title">Triumphal Arch<span>-</span>Elysee Palace</div>
 				<div class="work-overview__place">
 					<button class="work-overview__prev"><i></i></button>
@@ -200,6 +227,7 @@
 <!-- END .wrap -->
 <!-- BEGIN .checkpoint -->
 <form class="checkpoint" action="" style="top: 50px; left: 50px">
+	<button class="checkpoint__close"></button>
 	<strong>Enter the name of the checkpoint</strong>
 	<input class="checkpoint__name" type="text">
 	<strong>Browse a photo</strong>
@@ -216,6 +244,7 @@
 <!-- END .checkpoint -->
 <!-- BEGIN .checkpoint -->
 <form class="checkpoint" action="" style="top: 300px; left: 50px">
+	<button class="checkpoint__close"></button>
 	<strong>Enter the name of the checkpoint</strong>
 	<input class="checkpoint__name" type="text">
 	<strong>Browse a photo</strong>
