--- a/version.html
+++ b/version.html
@@ -24,19 +24,31 @@
 		<h2 class="steps__title">This is Photoshop's version<span>of Lorem Ipsum.</span></h2>			
 		<ul class="steps__list">
 			<li>	
-				<img src="img/v1.png">
-				<h3 class="title">Draw your <span>map</span></h3>
-				<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor. </p>
+				<div class="steps__flipper">
+					<div class="steps__front steps__front_v1"></div>
+					<div class="steps__back">
+						<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor. </p>
+					</div>
+				</div>				
+				<h3 class="title">Draw your <span>map</span></h3>				
 			</li>
 			<li>	
-				<img src="img/v2.png">
-				<h3 class="title">Record your <span>voice</span></h3>
-				<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,  This is Photoshop's version  of Lorem Ipsum. </p>
+				<div class="steps__flipper">
+					<div class="steps__front steps__front_v2"></div>
+					<div class="steps__back">
+						<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,  This is Photoshop's version  of Lorem Ipsum. </p>
+					</div>
+				</div>				
+				<h3 class="title">Record your <span>voice</span></h3>				
 			</li>
 			<li>	
-				<img src="img/v3.png">
+				<div class="steps__flipper">
+					<div class="steps__front steps__front_v3"></div>
+					<div class="steps__back">
+						<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor. </p>
+					</div>
+				</div>				
 				<h3 class="title">Earn <span>Money</span></h3>
-				<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor. </p>
 			</li>
 		</ul>
 	</section>
